--- a/lambda/us-east-1_ask-custom-my-study-default/package.json
+++ b/lambda/us-east-1_ask-custom-my-study-default/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ask-sdk": "^2.0.0",
     "ask-sdk-model": "^1.0.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "moment-weekday-calc": "^1.1.4",
+    "moment-duration-format": "^2.2.2"
   }
 }
